add table for page calendrier semis

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,6 +4,10 @@ $secondaryColor: #EBB016;
 $color3: #E0FF20;
 $color4: #21DAFF;
 $color5: #FF5C1A;
+
+$colorBrown: rgb(157, 90, 40);
+$colorRed: rgb(182, 59, 59);
+$colorBlue: rgb(43, 45, 175);
 // == Font 
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 $fontMenu: 'Redressed', cursive;
