--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,7 +1,27 @@
 @use "src/styles/utils/vars";
 
+@mixin legendBrown {
+  background-color: vars.$colorBrown;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
 
-
+@mixin legendRed {
+  background-color: vars.$colorRed;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+@mixin legendBlue {
+  background-color: vars.$colorBlue;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
 @mixin flexStartCenter {
   display: flex;
   justify-content: center;
@@ -62,7 +82,7 @@
   }
 }
 @mixin for-screen-small-medium {
-  @media  (max-width: 999px) {
+  @media (max-width: 999px) {
     @content;
   }
 }
