add new table for page calendrier semis

--- a/src/Pages/Calendar/calendar.scss
+++ b/src/Pages/Calendar/calendar.scss
@@ -67,6 +67,7 @@
         border: 1px solid #dbe3ff;
         padding: 1rem;
         width: 100%;
+        font-weight: bold;
       }
       .blue {
         background: vars.$colorBlue;
