add form register and login style css

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -22,6 +22,14 @@
   border-radius: 50%;
   margin-right: 1rem;
 }
+@mixin buttonInput {
+  background: vars.$primaryColor;
+  border: none;
+  height: 3rem;
+  border-radius: 2rem;
+  color: vars.$colorLight;
+  font-weight: bold;
+}
 @mixin flexStartCenter {
   display: flex;
   justify-content: center;
