--- a/src/Components/Navigation/navigationDesktop.scss
+++ b/src/Components/Navigation/navigationDesktop.scss
@@ -6,13 +6,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 10;
   box-shadow: 0px 4px 10px rgb(179, 179, 179);
-    li {
-        font-size: 2rem;
-        color: vars.$secondaryColor;
-        margin: 0 1.5rem;
-        font-family: vars.$fontMenu;
-    }
+  li {
+    font-size: 2rem;
+    color: vars.$secondaryColor;
+    margin: 0 1.5rem;
+    font-family: vars.$fontMenu;
+  }
   .navigation_li--picture {
     position: relative;
     margin: 0 4rem;
@@ -22,7 +24,6 @@
       width: auto;
       border-radius: 2rem;
       margin-top: 121px;
-
     }
   }
 }
