--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,9 +1,10 @@
 // == Color
-$primaryColor: #74EC8D;
+$primaryColor: #089426;
 $secondaryColor: #EBB016;
 $color3: #E0FF20;
 $color4: #21DAFF;
 $color5: #FF5C1A;
+$colorLight: #ffffff;
 
 $colorBrown: rgb(157, 90, 40);
 $colorRed: rgb(182, 59, 59);
@@ -11,3 +12,6 @@ $colorBlue: rgb(43, 45, 175);
 // == Font 
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 $fontMenu: 'Redressed', cursive;
+
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+$fontTitle: 'Lobster', cursive;
