add validation register form

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,7 +5,7 @@ $color3: #E0FF20;
 $color4: #21DAFF;
 $color5: #FF5C1A;
 $colorLight: #ffffff;
-
+$colorError: rgb(211, 0, 0);
 $colorBrown: rgb(157, 90, 40);
 $colorRed: rgb(182, 59, 59);
 $colorBlue: rgb(43, 45, 175);
