--- a/src/Pages/Register/register.scss
+++ b/src/Pages/Register/register.scss
@@ -27,6 +27,16 @@
     box-shadow: 0px 6px 10px rgb(179, 179, 179);
     position: relative;
 
+    .signup__error {
+      color: vars.$colorError;
+      font-weight: bold;
+      font-size: 0.6rem;
+      margin-bottom: 1rem;
+      align-self: flex-start;
+      margin-left: 5rem;
+      padding-top: 5px;
+    }
+
     h1 {
       width: 100%;
       height: 3.5rem;
@@ -62,26 +72,31 @@
         &:focus ~ #labelField-email,
         &:not(:placeholder-shown) ~ #labelField-email {
           transform: translateY(-1em) scale(0.8);
+          left: 75px;
         }
 
         &:focus ~ #labelField-password,
         &:not(:placeholder-shown) ~ #labelField-password {
           transform: translateY(-1em) scale(0.8);
+          left: 70px;
         }
 
         &:focus ~ #labelField-password-confirm,
         &:not(:placeholder-shown) ~ #labelField-password-confirm {
           transform: translateY(-1em) scale(0.8);
+          left: 60px;
         }
 
         &:focus ~ #labelField-firstname,
         &:not(:placeholder-shown) ~ #labelField-firstname {
           transform: translateY(-1em) scale(0.8);
+          left: 74px;
         }
 
-        &:focus ~ #labelField-lastname ,
-        &:not(:placeholder-shown) ~ #labelField-lastname  {
+        &:focus ~ #labelField-lastname,
+        &:not(:placeholder-shown) ~ #labelField-lastname {
           transform: translateY(-1em) scale(0.8);
+          left: 75px;
         }
       }
 
@@ -122,7 +137,138 @@
         top: 395px;
         left: 79px;
       }
+
+      i {
+        position: absolute;
+        right: 69px;
+      }
+      .fa-check {
+        padding-right: 16px;
+        margin-top: 6px;
+        color: green;
+        min-width: 50px;
+        text-align: right;
+      }
+
+      .register_input--success {
+        border-bottom: solid green 2px!important;
+        background-color: rgba(0, 128, 0, 0.159);
+        border-top-left-radius: 0.2rem;
+        border-top-right-radius: 0.2rem;
+      }
     }
+
+    .input_box--error {
+      width: 15rem;
+      margin: 0 2rem;
+
+      i {
+        position: absolute;
+        right: 69px;
+      }
+
+      .fa-check {
+        display: none;
+        
+      }
+      
+      .fa-exclamation-circle {
+        padding-right: 16px;
+        margin-top: 6px;
+        color: red;
+        min-width: 31px;
+        min-height: 32px;
+        align-self: flex-end;
+      }
+
+      input {
+        width: 100%;
+
+        border: 0;
+        border-bottom: 1.5px solid vars.$colorError;
+        background-color: rgba(253, 0, 0, 0.09);
+        padding: 4px 0;
+
+        font-size: 1em;
+        &::placeholder {
+          color: transparent;
+        }
+
+        &:focus {
+          width: 100%;
+          transition: 0.4s;
+          border-bottom: 3px solid rgba(253, 0, 0, 0.624);
+        }
+        &:focus ~ #labelField-email,
+        &:not(:placeholder-shown) ~ #labelField-email {
+          transform: translateY(-1em) scale(0.8);
+          left:75px;
+        }
+
+        &:focus ~ #labelField-password,
+        &:not(:placeholder-shown) ~ #labelField-password {
+          transform: translateY(-1em) scale(0.8);
+          left:70px;
+        }
+
+        &:focus ~ #labelField-password-confirm,
+        &:not(:placeholder-shown) ~ #labelField-password-confirm {
+          transform: translateY(-1em) scale(0.8);
+          left:60px;
+        }
+
+        &:focus ~ #labelField-firstname,
+        &:not(:placeholder-shown) ~ #labelField-firstname {
+          transform: translateY(-1em) scale(0.8);
+          left:75px;
+        }
+
+        &:focus ~ #labelField-lastname,
+        &:not(:placeholder-shown) ~ #labelField-lastname {
+          transform: translateY(-1em) scale(0.8);
+          left:77px;
+        }
+      }
+
+      label {
+        margin: 1rem 0;
+        color: rgb(153, 153, 153);
+        height: 2px;
+        transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1);
+        pointer-events: none;
+      }
+
+      #labelField-email {
+        position: absolute;
+        top: 156px;
+        left: 79px;
+      }
+
+      #labelField-password {
+        position: absolute;
+        top: 215px;
+        left: 79px;
+      }
+
+      #labelField-password-confirm {
+        position: absolute;
+        top: 273px;
+        left: 79px;
+      }
+
+      #labelField-firstname {
+        position: absolute;
+        top: 332px;
+        left: 79px;
+      }
+
+      #labelField-lastname {
+        position: absolute;
+        top: 390px;
+        left: 79px;
+      }
+    }
+
     .register_button {
       @include mixins.buttonInput;
       width: 15rem;
