add menu mobile

--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -3,6 +3,7 @@
 .footer {
     position: absolute;
     width: 100%;
+    z-index: -2;
     .copyright {
         display: flex;
         justify-content: flex-end;
