--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,6 +9,7 @@ $colorError: rgb(211, 0, 0);
 $colorBrown: rgb(157, 90, 40);
 $colorRed: rgb(182, 59, 59);
 $colorBlue: rgb(43, 45, 175);
+$colorGreenTransparent: #089426e0;
 // == Font 
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 $fontMenu: 'Redressed', cursive;
