--- a/src/Pages/Connexion/connexion.scss
+++ b/src/Pages/Connexion/connexion.scss
@@ -6,9 +6,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 22rem 0;
-  background: #F8F9FD;
+  padding: 15rem 0;
+  background: #f8f9fd;
   height: 100%;
+
 
   .login_isconnected {
     padding-bottom: 25rem;
@@ -21,9 +22,9 @@
   }
 
   .login_isconnected {
-      color: vars.$primaryColor;
-      font-family: vars.$fontMenu;
-      font-size: 2rem;
+    color: vars.$primaryColor;
+    font-family: vars.$fontMenu;
+    font-size: 2rem;
   }
 
   form {
@@ -37,6 +38,7 @@
     background: vars.$colorLight;
     box-shadow: 0px 6px 10px rgb(179, 179, 179);
     position: relative;
+    z-index: 0;
 
     h1 {
       width: 100%;
@@ -71,12 +73,12 @@
           border-bottom: 3px solid vars.$color5;
         }
         &:focus ~ #labelField-email,
-        &:not(:placeholder-shown) ~ #labelField-email{
+        &:not(:placeholder-shown) ~ #labelField-email {
           transform: translateY(-1em) scale(0.8);
         }
 
         &:focus ~ #labelField-password,
-        &:not(:placeholder-shown) ~ #labelField-password{
+        &:not(:placeholder-shown) ~ #labelField-password {
           transform: translateY(-1em) scale(0.8);
         }
       }
@@ -112,6 +114,5 @@
         font-weight: bold;
       }
     }
-
   }
 }
