--- a/src/Pages/Register/register.scss
+++ b/src/Pages/Register/register.scss
@@ -6,9 +6,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 14rem 0;
+  padding: 10rem 0;
+  margin-top: 5rem;
   background: #f8f9fd;
-  height: 100%;
+  height: 60%;
 
   h1 {
     font-weight: bold;
