fix problem css mobile

--- a/src/styles/utils/index.scss
+++ b/src/styles/utils/index.scss
@@ -1,8 +1,9 @@
-@use 'reset';
-@use 'vars';
-@use 'mixins';
+@use "reset";
+@use "vars";
+@use "mixins";
 body {
   width: 100%;
   min-height: 100%;
   font-family: sans-serif;
 }
+ 
