--- a/src/Pages/Register/register.scss
+++ b/src/Pages/Register/register.scss
@@ -6,10 +6,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 10rem 0;
-  margin-top: 5rem;
+  padding: 15rem 0;
   background: #f8f9fd;
-  height: 60%;
+  height: 100vh;
+  @include mixins.for-phone-and-tablet-only {
+    padding-bottom: 20rem;
+  }
 
   h1 {
     font-weight: bold;
@@ -27,6 +29,9 @@
     background: vars.$colorLight;
     box-shadow: 0px 6px 10px rgb(179, 179, 179);
     position: relative;
+    @include mixins.for-phone-only {
+      width: 20rem;
+    }
 
     .signup__error {
       color: vars.$colorError;
@@ -36,6 +41,9 @@
       align-self: flex-start;
       margin-left: 5rem;
       padding-top: 5px;
+      @include mixins.for-phone-only {
+        margin-left: 3rem;
+      }
     }
 
     h1 {
@@ -52,6 +60,9 @@
     .input_box {
       width: 15rem;
       margin: 0 2rem 2rem 2rem;
+      @include mixins.for-phone-only {
+        width: 14rem;
+      }
       input {
         width: 100%;
 
@@ -113,35 +124,53 @@
         position: absolute;
         top: 156px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 63px;
+        }
       }
 
       #labelField-password {
         position: absolute;
         top: 215px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 63px;
+        }
       }
 
       #labelField-password-confirm {
         position: absolute;
         top: 275px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 63px;
+        }
       }
 
       #labelField-firstname {
         position: absolute;
         top: 335px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 63px;
+        }
       }
 
       #labelField-lastname {
         position: absolute;
         top: 395px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 63px;
+        }
       }
 
       i {
         position: absolute;
         right: 69px;
+        @include mixins.for-phone-only {
+          right: 39px;
+        }
       }
       .fa-check {
         padding-right: 16px;
@@ -162,10 +191,16 @@
     .input_box--error {
       width: 15rem;
       margin: 0 2rem;
+      @include mixins.for-phone-only {
+        width: 14rem;
+      }
 
       i {
         position: absolute;
         right: 69px;
+        @include mixins.for-phone-only {
+          right: 39px;
+        }
       }
 
       .fa-check {
@@ -204,6 +239,7 @@
         &:not(:placeholder-shown) ~ #labelField-email {
           transform: translateY(-1em) scale(0.8);
           left:75px;
+          
         }
 
         &:focus ~ #labelField-password,
@@ -243,30 +279,45 @@
         position: absolute;
         top: 156px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 49px;
+        }
       }
 
       #labelField-password {
         position: absolute;
         top: 215px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 49px;
+        }
       }
 
       #labelField-password-confirm {
         position: absolute;
         top: 273px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 49px;
+        }
       }
 
       #labelField-firstname {
         position: absolute;
         top: 332px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 49px;
+        }
       }
 
       #labelField-lastname {
         position: absolute;
         top: 390px;
         left: 79px;
+        @include mixins.for-phone-only {
+          left: 49px;
+        }
       }
     }
 
@@ -277,6 +328,9 @@
     }
     p {
       padding-bottom: 0.7rem;
+      @include mixins.for-phone-only {
+        font-size: 0.8rem;
+      }
       span {
         font-weight: bold;
       }
