--- a/src/Components/Navigation/navigationDesktop.scss
+++ b/src/Components/Navigation/navigationDesktop.scss
@@ -14,6 +14,10 @@
     color: vars.$secondaryColor;
     margin: 0 1.5rem;
     font-family: vars.$fontMenu;
+
+    .button_logged {
+      cursor: pointer;
+    }
   }
   .navigation_li--picture {
     position: relative;
