--- a/src/Components/Navigation/navigationDesktop.scss
+++ b/src/Components/Navigation/navigationDesktop.scss
@@ -1,4 +1,5 @@
 @use "src/styles/utils/vars";
+@use "src/styles/utils/mixins";
 
 .navigation_desktop {
   height: 7rem;
@@ -28,6 +29,9 @@
       width: auto;
       border-radius: 2rem;
       margin-top: 121px;
+      @include mixins.for-desktop-small-medium {
+        height: 7rem;
+      }
     }
   }
 }
