--- a/src/Pages/Calendar/calendar.scss
+++ b/src/Pages/Calendar/calendar.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   margin-top: 10rem;
   width: 100%;
 
