--- a/src/Pages/SpaceUser/profil.scss
+++ b/src/Pages/SpaceUser/profil.scss
@@ -130,6 +130,7 @@
         height: 24rem;
         width: 100%;
         margin-bottom: 1.5rem;
+        transition: all ease-in-out 1s;
 
         .profil_data--input {
           display: flex;
@@ -187,6 +188,7 @@
         height: 11rem;
         width: 100%;
         margin-bottom: 1.5rem;
+        transition: all ease-out 1s;
 
         .profil_data--input {
           display: flex;
