--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -16,3 +16,6 @@ $fontMenu: 'Redressed', cursive;
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 $fontTitle: 'Lobster', cursive;
+
+@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&display=swap');
+$fontSecondary: 'Sansita Swashed', cursive;
