add map list potager of bdd

--- a/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
+++ b/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
@@ -38,6 +38,21 @@
         margin-top: 1rem;
         background: #7c4807;
       }
+
+      .carre33 {
+        width: 25rem;
+        height: 25rem;
+      }
+
+      .carre25 {
+        width: 35rem;
+        height: 9rem;
+      }
+
+      .carre24 {
+        width: 30rem;
+        height: 9rem;
+      }
     }
   }
 }
