--- a/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
+++ b/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
@@ -38,6 +38,15 @@
         height: 9rem;
         margin-top: 1rem;
         background: #7c4807;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+        img {
+          height: 3.5rem;
+          border-radius: 50%;
+          margin: 1.3rem;
+        }
       }
 
       .carre33 {
