--- a/src/Pages/SpaceUser/spaceUser.scss
+++ b/src/Pages/SpaceUser/spaceUser.scss
@@ -5,6 +5,9 @@
   display: flex;
   min-height: 100vh;
   width: 100%;
+  @include mixins.for-phone-and-tablet-only {
+    flex-direction: column;
+  }
 
   .menu_user {
     display: flex;
@@ -13,6 +16,15 @@
     background: vars.$colorBrown;
     width: 25rem;
     padding-top: 2rem;
+    @include mixins.for-phone-and-tablet-only {
+      width: 100%;
+      height: 6rem;
+      margin-top: 6.5rem;
+      flex-direction: row;
+      position: fixed;
+      z-index: 1;
+      padding-top: 3rem;
+    }
     @include mixins.for-desktop-small-medium {
       width: 18rem;
     }
@@ -23,13 +35,18 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      @include mixins.for-phone-and-tablet-only {
+        margin: 2rem 0 3.5rem 1rem;
+      }
 
       img {
         height: 90px;
         width: auto;
         border-radius: 50%;
-
         margin-bottom: 1rem;
+        @include mixins.for-phone-and-tablet-only {
+          height: 40px;
+        }
         @include mixins.for-desktop-small-medium {
           height: 90px;
         }
@@ -39,30 +56,67 @@
         color: vars.$color4;
         font-weight: bold;
         font-family: vars.$fontSecondary;
+        @include mixins.for-phone-and-tablet-only {
+          display: none;
+        }
       }
     }
 
     ul {
       padding: 0px 0px 0px 16px;
-
+      @include mixins.for-phone-and-tablet-only {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100%;
+      }
 
       li:not(:last-child) {
         margin-bottom: 3rem;
       }
 
       li {
+        display: flex;
         color: vars.$colorLight;
         font-weight: bold;
         padding: 0.5rem 0;
+        
+        a {
+          display: flex;
+          @include mixins.for-phone-and-tablet-only {
+            flex-direction: column;
+            align-items: center;
+          }
+
+          p {
+            @include mixins.for-phone-and-tablet-only {
+              font-size: 0.7rem;
+              text-align: center;
+              font-weight: normal;
+            }
+            @include mixins.for-phone-only {
+              font-size: 0.6rem;
+            }
+          }
+        }
 
         svg {
           margin-right: 0.7rem;
-          color: #6FA943;
+          color: #6fa943;
+          @include mixins.for-phone-and-tablet-only {
+            height: 1.5rem;
+            width: auto;
+            padding-bottom: 0.7rem;
+            padding-left: 0.5rem;
+            margin-right: 0;
+          }
+          @include mixins.for-phone-only {
+            height: 1rem;
+          }
         }
 
         .active {
           color: vars.$color5;
-          
         }
       }
     }
