--- a/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
+++ b/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
@@ -73,7 +73,7 @@
             right: 20px;
             top: 16px;
             cursor: pointer;
-            line-height: 1.2em;
+            font-size: 1.2rem;
             width: 1.2em;
             height: 1.2em;
             text-align: center;
