--- a/src/Pages/Register/register.scss
+++ b/src/Pages/Register/register.scss
@@ -6,12 +6,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 15rem 0;
+  padding: 10rem 0;
   background: #f8f9fd;
-  height: 100vh;
-  @include mixins.for-phone-and-tablet-only {
-    padding-bottom: 20rem;
-  }
+  height: 60%;
 
   h1 {
     font-weight: bold;
@@ -23,15 +20,12 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 50rem;
+    height: 55rem;
     width: 25rem;
     border-radius: 1rem;
     background: vars.$colorLight;
     box-shadow: 0px 6px 10px rgb(179, 179, 179);
     position: relative;
-    @include mixins.for-phone-only {
-      width: 20rem;
-    }
 
     .signup__error {
       color: vars.$colorError;
@@ -39,6 +33,7 @@
       font-size: 0.6rem;
       margin-bottom: 1rem;
       align-self: flex-start;
+      margin-left: 5rem;
       padding-top: 5px;
     }
 
@@ -53,12 +48,16 @@
       color: vars.$colorBlue;
     }
 
+    
+
     .input_box {
       width: 15rem;
       margin: 0 2rem 2rem 2rem;
-      @include mixins.for-phone-only {
-        width: 14rem;
+
+      #input_avatar {
+        margin-top: 1rem;
       }
+
       input {
         width: 100%;
 
@@ -120,66 +119,41 @@
         position: absolute;
         top: 156px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 47px;
-        }
       }
 
       #labelField-password {
         position: absolute;
         top: 215px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 47px;
-        }
       }
 
       #labelField-password-confirm {
         position: absolute;
         top: 275px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 47px;
-        }
       }
 
       #labelField-firstname {
         position: absolute;
         top: 335px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 47px;
-        }
       }
 
       #labelField-lastname {
         position: absolute;
         top: 395px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 47px;
-        }
       }
 
       #labelField-avatar {
         position: absolute;
-        top: 450px;
+        top: 445px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 47px;
-        }
-      }
-
-      #input_avatar {
-        margin-top: 1rem;
       }
 
       i {
         position: absolute;
         right: 69px;
-        @include mixins.for-phone-only {
-          right: 39px;
-        }
       }
       .fa-check {
         padding-right: 16px;
@@ -197,86 +171,77 @@
       }
     }
 
-    .fa-check {
-      display: none;
-      
-    }
-    
-    .fa-exclamation-circle {
-      padding-right: 16px;
-      margin-top: 6px;
-      color: red;
-      min-width: 31px;
-      min-height: 32px;
-      align-self: flex-end;
-    }
-
-    .input_error {
-      width: 100%;
-
-      border: 0;
-      border-bottom: 1.5px solid vars.$colorError;
-      background-color: rgba(253, 0, 0, 0.09);
-      padding: 4px 0;
-
-      font-size: 1em;
-      &::placeholder {
-        color: transparent;
-      }
-
-      &:focus {
-        width: 100%;
-        transition: 0.4s;
-        border-bottom: 3px solid rgba(253, 0, 0, 0.624);
-      }
-      &:focus ~ #labelField-email,
-      &:not(:placeholder-shown) ~ #labelField-email {
-        transform: translateY(-1em) scale(0.8);
-        left:75px;
-        
-      }
-
-      &:focus ~ #labelField-password,
-      &:not(:placeholder-shown) ~ #labelField-password {
-        transform: translateY(-1em) scale(0.8);
-        left:70px;
-      }
-
-      &:focus ~ #labelField-password-confirm,
-      &:not(:placeholder-shown) ~ #labelField-password-confirm {
-        transform: translateY(-1em) scale(0.8);
-        left:60px;
-      }
-
-      &:focus ~ #labelField-firstname,
-      &:not(:placeholder-shown) ~ #labelField-firstname {
-        transform: translateY(-1em) scale(0.8);
-        left:75px;
-      }
-
-      &:focus ~ #labelField-lastname,
-      &:not(:placeholder-shown) ~ #labelField-lastname {
-        transform: translateY(-1em) scale(0.8);
-        left:77px;
-      }
-    }
-
     .input_box--error {
       width: 15rem;
       margin: 0 2rem;
-      @include mixins.for-phone-only {
-        width: 14rem;
-      }
-
+      
       i {
         position: absolute;
         right: 69px;
-        @include mixins.for-phone-only {
-          right: 39px;
-        }
       }
 
+      .fa-check {
+        display: none;
+        
+      }
       
+      .fa-exclamation-circle {
+        padding-right: 16px;
+        margin-top: 6px;
+        color: red;
+        min-width: 31px;
+        min-height: 32px;
+        align-self: flex-end;
+      }
+
+      input {
+        width: 100%;
+
+        border: 0;
+        border-bottom: 1.5px solid vars.$colorError;
+        background-color: rgba(253, 0, 0, 0.09);
+        padding: 4px 0;
+
+        font-size: 1em;
+        &::placeholder {
+          color: transparent;
+        }
+
+        &:focus {
+          width: 100%;
+          transition: 0.4s;
+          border-bottom: 3px solid rgba(253, 0, 0, 0.624);
+        }
+        &:focus ~ #labelField-email,
+        &:not(:placeholder-shown) ~ #labelField-email {
+          transform: translateY(-1em) scale(0.8);
+          left:75px;
+        }
+
+        &:focus ~ #labelField-password,
+        &:not(:placeholder-shown) ~ #labelField-password {
+          transform: translateY(-1em) scale(0.8);
+          left:70px;
+        }
+
+        &:focus ~ #labelField-password-confirm,
+        &:not(:placeholder-shown) ~ #labelField-password-confirm {
+          transform: translateY(-1em) scale(0.8);
+          left:60px;
+        }
+
+        &:focus ~ #labelField-firstname,
+        &:not(:placeholder-shown) ~ #labelField-firstname {
+          transform: translateY(-1em) scale(0.8);
+          left:75px;
+        }
+
+        &:focus ~ #labelField-lastname,
+        &:not(:placeholder-shown) ~ #labelField-lastname {
+          transform: translateY(-1em) scale(0.8);
+          left:77px;
+        }
+      }
 
       label {
         margin: 1rem 0;
@@ -290,45 +255,30 @@
         position: absolute;
         top: 156px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 49px;
-        }
       }
 
       #labelField-password {
         position: absolute;
         top: 215px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 49px;
-        }
       }
 
       #labelField-password-confirm {
         position: absolute;
         top: 273px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 49px;
-        }
       }
 
       #labelField-firstname {
         position: absolute;
         top: 332px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 49px;
-        }
       }
 
       #labelField-lastname {
         position: absolute;
         top: 390px;
         left: 79px;
-        @include mixins.for-phone-only {
-          left: 49px;
-        }
       }
     }
 
@@ -339,9 +289,6 @@
     }
     p {
       padding-bottom: 0.7rem;
-      @include mixins.for-phone-only {
-        font-size: 0.8rem;
-      }
       span {
         font-weight: bold;
       }
