--- a/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
+++ b/src/Pages/SpaceUser/MyGarden/Potager/potager.scss
@@ -51,6 +51,27 @@
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
+        position: relative;
+
+        #trashIcon {
+          position: absolute;
+          bottom: -25px;
+          right: -21px;
+          font-size: 2rem;
+          width: 1.2em;
+          height: 1.2em;
+          text-align: center;
+          display: inline-block;
+          background: vars.$colorError;
+          border-radius: 50%;
+          transition: 0.5s;
+          cursor: pointer;
+
+          &:hover {
+            background: black;
+            color: vars.$colorError;
+          }
+        }
 
         .plant_box {
           position: relative;
@@ -80,14 +101,13 @@
             display: inline-block;
             background: vars.$colorError;
             border-radius: 50%;
-            transition:0.5s;
+            transition: 0.5s;
 
             &:hover {
               background: black;
               color: vars.$colorError;
             }
           }
-
         }
       }
 
