--- a/src/Pages/SpaceUser/AddSemis/addSemis.scss
+++ b/src/Pages/SpaceUser/AddSemis/addSemis.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 25rem;
 
     form {
       display: flex;
